<resources>
    <string name="app_name">Onduline</string>
    <string name="app_version">Version 1.2.6</string>
    <string name="contact_Login">CONTACT SERVICE : 0822 97 345 789\nwww.onduline.co.id / www.onduvilla.co.id</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">LANJUT</string>
    <string name="skip">LOMPATI</string>
    <string name="submit">Kirim</string>
    <string name="start">LANJUT</string>
    <string name="neworder">Order Baru</string>
    <string name="history">HISTORY</string>
    <string name="total_point">Total Poin</string>
    <string name="total_Order">Total Order</string>
    <string name="tecnical_support">Dukungan Teknis</string>
    <string name="qna">Tanya Jawab</string>
    <string name="history_surat_jalan">HISTORY SURAT JALAN</string>
    <string name="history_proyek_saya">HISTORY PROYEK ANDA</string>
    <string name="instalation_guide_onduline">Panduan Pemasangan ONDULINE®</string>
    <string name="instalation_guide_bardoline">Panduan Pemasangan BARDOLINE®</string>
    <string name="home_program">Program</string>
    <string name="home_marketing_support">Dukungan Marketing</string>
    <string name="home_technical_support">Dukungan Teknis</string>
    <string name="home_product">Produk</string>
    <string name="home_calculator">Kalkulator</string>
    <string name="home_contact_onduline">Hubungi kami</string>
    <string name="home_ordering_product">Pemesanan Produk</string>
    <string name="home_ogra">Inspirasi Atap</string>
    <string name="home_data_proyek">Dukungan Proyek</string>
    <string name="order_brochure">Permintaan Brosur</string>
    <string name="order_souvenir">Permintaan Suvenir</string>
    <string name="permintaan_garansi">Permintaan Garansi</string>
    <string name="modern_outlet">Modern Outlet</string>
    <string name="toko_bahan_bangunan">Toko Bahan Bangunan</string>
    <string name="toko_baja_ringan">Toko Baja Ringan</string>
    <string name="btn_upload_surat_jalan">Upload Surat Jalan</string>
    <string name="keterangan_btn_upload_surat_jalan">Dapatkan Poin dengan cara\nmengupload surat jalan baru</string>
    <string name="tittle_header_data_proyek">Dukungan Proyek</string>
    <string name="note_data_proyek">permintaan data dokumen dapat mengirimkan\nemail ke info@ondulineindonesia.com </string>
    <string name="tittle_header_dokumen_teknis">Dokumen Teknis</string>
    <string name="btn_dokumen_teknis">DOKUMEN TEKNIS</string>
    <string name="btn_input_informasi_proyek">INPUT INFORMASI PROYEK</string>
    <string name="tittle_produk_onduline">Download Dokumen Produk ONDULINE®</string>
    <string name="tittle_produk_onduvilla">Download Dokumen Produk ONDUVILLA®</string>
    <string name="tittle_produk_bituline">Download Dokumen Produk BITULINE®</string>
    <string name="tittle_produk_bardoline">Download Dokumen Produk BARDOLINE®</string>
    <string name="data_proyek_green_certification">Green Certification</string>
    <string name="data_proyek_tds_onduline">TDS ONDULINE</string>
    <string name="data_proyek_rks_onduline">RKS Onduline</string>
    <string name="data_proyek_sertifikat_sni">Sertifikat SNI</string>
    <string name="data_proyek_sni_pemasangan">SNI PEMASANGAN 7711-2-2012</string>
    <string name="data_proyek_sound_test">Sound Test</string>
    <string name="data_proyek_wind_testing_onduline">Wind Testing Onduline</string>
    <string name="data_proyek_rks_onduvilla">RKS Onduvilla</string>
    <string name="data_proyek_wind_testing_onduvilla">Wind Testing Onduvilla</string>
    <string name="data_proyek_tds_onduvilla">TDS Onduvilla</string>
    <string name="data_proyek_technical_data_onduvilla_pphr_3d">Technical Data Onduvilla PPHR 3D</string>
    <string name="data_proyek_tds_bituline">TDS BITULINE</string>
    <string name="data_proyek_tds_bardoline_beaver">TDS BARDOLINE BEAVER</string>
    <string name="data_proyek_tds_bardoline_rectangular">TDS BARDOLINE RECTANGULAR</string>
    <string name="tittle_header_input_informasi_proyek">Input Informasi Proyek</string>
    <string name="project_name">Nama Proyek</string>
    <string name="location">Lokasi</string>
    <string name="roof_area">Luas Atap</string>
    <string name="roof_type">Jenis Atap</string>
    <string name="hint_project_name">Masukan nama proyek anda</string>
    <string name="hint_location">Masukan lokasi proyek anda</string>
    <string name="hint_roof_area">Masukan luas atap</string>
    <string name="project_address">Alamat Lengkap Proyek*</string>
    <string name="hint_project_address">Masukan alamat lengkap proyek anda</string>
    <string name="project_state">Provinsi Proyek*</string>
    <string name="hint_project_state">Masukan provinsi proyek anda</string>
    <string name="project_city">Kota Proyek*</string>
    <string name="hint_project_city">Masukan kota proyek anda</string>
    <string name="header_onduvilla_inspirasi_atap">Inspirasi Atap</string>
    <string name="tittle_onduvilla_green_roof_award">SAYEMBARA DESAIN ATAP PONDOK WISATA TEPI PANTAI</string>
    <string name="ogra_tittle_persyaratan_karya">PERSYARATAN KARYA</string>
    <string name="ogra_periode">Periode Sayembara : 1 April – 30 September 2017</string>
    <string name="ogra_intro">Setelah sukses pada program Onduline Green Roof Award yang pertama pada 2013 dan 2015 yang lalu, PT Onduline Indonesia kembali mewujudkan apresiasinya terhadap pengembangan dan kemajuan arsitek Indonesia dengan meluncurkan program OGRA2017 yang bekerja sama dengan dan Green Building Council Indonesia (GBCI). Sayembara merancang desain bangunan atau arsitektur ini ditujukan untuk perorangan profesional di bidang arsitek, design interior, developer, konsultan perencana dan kontraktor pelaksana yang telah berprofesi minimal satu tahun.</string>
    <string name="ogra_tema">Tahun ini Tema yang diangkat adalah “Desain Atap Pondok Wisata Pinggir Pantai”. Fokus penilaian desain terletak pada bentuk dan fungsi atap pondok wisata yang cocok untuk wilayah pinggir pantai. Peserta bebas menentukan desain penyelesaian dan instalasi bentuk atap sesuai dengan iklim tropis Indonesia, namun tetap dapat diaplikasikan di lapangan, serta memiliki panduan pemasangan yang baik dan benar.</string>
    <string name="ogra_tittle_juri">Berlaku sebagai tim juri adalah :</string>
    <string name="ogra_juri">Berlaku sebagai tim juri adalah :\n
1. Tatok Prijobodo, Country Director PT Onduline Indonesia\n
2. Naning Adiwoso, Core Founder dan Chair Person Green Building Council Indonesia\n
3. Sigit Kusumawijaya, Director dan Principal architect of sigit.kusumawijaya\n</string>
    <string name="ogra_tittle_penghargaan_hadiah_pemenang">HADIAH PENGHARGAAN :</string>
    <string name="ogra_penghargaan_hadiah_pemenang">Hadiah pemenang Onduline Green Roof Award 2017 :\n
1. Pemenang pertama mendapatkan : Uang Tunai Rp 40.000.000\n
2. Pemenang kedua mendapatkan : Uang Tunai Rp 20.000.000\n
3. Pemenang ketiga mendapatkan : Uang Tunai Rp 15.000.000\n
4. Dua pemenang harapan masing-masing mendapatkan hadiah 1 buah IPAD AIR\n
</string>
    <string name="ogra_download_panduan_sayembara">Panduan sayembara download disini</string>
    <string name="ogra_download_formulir_pendaftaran">Formulir pendaftaran download disini</string>
    <string name="state">Provinsi*</string>
    <string name="city">Kota*</string>
    <string name="email_tokoBahanBangunan_dan_TokoTradisional">Email (isi dengan : namalengkap@gmail.com)</string>
    <string name="store_name">Nama Toko*</string>
    <string name="phone_number">Nomor Handphone*</string>
    <string name="phone_number_store_tokoBahanBangunan_dan_TokoTradisional">Nomor Telepon Toko (jika ada)</string>
    <string name="distributor_name">Nama Distributor (jika mengetahui)</string>
    <string name="owner_name">Nama Owner*</string>
    <string name="no_id">No ID(KTP/SIM)*</string>
    <string name="username">Username*</string>
    <string name="password">Password* (kombinasi huruf dan angka)</string>
    <string name="re_password">Tulis ulang password*</string>
    <string name="hint_input_your_store_address">Isi alamat lengkap toko anda</string>
    <string name="hint_input_your_store_state">Isi provinsi domisili toko </string>
    <string name="hint_input_your_store_city">Isi kota domisili toko anda</string>
    <string name="hint_input_your_store_name">Isi nama toko anda</string>
    <string name="hint_input_your_phone_number">Isi nomor handphone anda</string>
    <string name="hint_input_your_phone_number_store">Isi nomor telepon toko anda</string>
    <string name="hint_input_your_email">Isi Email anda</string>
    <string name="hint_input_your_distributor_name">Isi nama distributor anda</string>
    <string name="hint_input_your_owner_name">Isi nama Owner anda</string>
    <string name="hint_input_your_no_id">Isi no ID(KTP/SIM) anda</string>
    <string name="hint_input_your_username_tokoBahanBangunan_dan_TokoTradisional">Isi dengan username yang anda inginkan dan mudah diingat </string>
    <string name="hint_input_your_password_tokoBahanBangunan_dan_TokoTradisional">Isi password yang mudah diingat</string>
    <string name="hint_input_your_re_password">Tulis ulang password</string>
    <string name="RegistarsiRetailTradisional">Registrasi Toko</string>
</resources>