<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration_from"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wiradipa.ondulineApplicator.RegistrationFromActivity">

    <!-- Login progress -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nav_drawer">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RegistarsiRetailTradisional"
                android:textAlignment="center"
                android:textColor="@color/colorTextLight"
                android:textSize="24dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:background="@drawable/bg_02"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/store_name"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_store_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Alamat Toko*"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_store_address" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/state"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/act_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_store_state" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/city"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/act_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_store_city" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_phone_number"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/txt_officePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/phone_number_store_tokoBahanBangunan_dan_TokoTradisional"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_officePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_phone_number_store"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/email_tokoBahanBangunan_dan_TokoTradisional"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_email"
                    android:inputType="textEmailAddress" />

                <!-- untuk tanggal lahir form registari gunakan satu nama id di bawah ini, berlaku unutk semuanya agar tidak ada penulisan ulang di dalam javanya-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/txtTittleBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Tanggal lahir"
                        android:textColor="@color/colorBlackAlpha"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtisianBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtTittleBirth"
                        android:text="00/00/00"
                        android:textSize="20dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txtisianBirthView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtTittleBirth"
                        android:text="00/00/00"
                        android:textSize="20dp" />

                    <Button
                        android:id="@+id/btnDatePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ps__button_youtube"
                        android:onClick="setDate"
                        android:text="Tanggal Lahir"
                        android:textColor="@color/colorTextLight" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_distributor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/distributor_name"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_distributor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_distributor_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/owner_name"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_owner_name" />

                <!-- checkbox KTP dan SIM -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/no_id"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_no_id"
                    android:inputType="number" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/rbKTP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onRBSignupClicked"
                        android:text="KTP" />

                    <RadioButton
                        android:id="@+id/rbSIM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onRBSignupClicked"
                        android:text="SIM" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/username"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_username_tokoBahanBangunan_dan_TokoTradisional" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/password"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_password_tokoBahanBangunan_dan_TokoTradisional"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/re_password"
                    android:textColor="@color/colorBlackAlpha"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hint_input_your_re_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnSubmitRegistrationForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/ps__button_youtube"
                    android:onClick="onClickRegistrationForm"
                    android:text="@string/submit"
                    android:textColor="@color/colorTextLight" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</RelativeLayout>
